[package]
name = "PvRProject_SimulationCraft_SOL0123"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
hyper = "1.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = {version = "1.47.1", features = ["full"]}
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
